# soft-skills-plataform

./: .vercelignore  QUICK_START.md  README.md  VERCEL_DEPLOYMENT.md  package.json  requirements.txt  vercel.json
soft-skills-back/: .env.example  .vercelignore  main.py  pyproject.toml  requirements.txt  vercel.json
soft-skills-back/alembic/: env.py
soft-skills-back/data/: seed.py
soft-skills-back/enums/: listening_game.py  study_context.py
soft-skills-back/llm/: __init__.py  challenge_evaluation.py  challenge_generator.py  models.py  prompt_builder.py  prompt_loader.py  schemas.py
soft-skills-back/model/: __init__.py  learning_goal.py  module.py  objective.py  pomodoro_preferences.py  self_evaluation.py  task.py  task_note.py  task_resource.py  user.py
soft-skills-back/mongo_service/: learning_goal.py  objective.py  roadmap.py  task.py
soft-skills-back/nosql_models/: roadmap.py
soft-skills-back/nosql_schema/: roadmap.py
soft-skills-back/router/: __init__.py  auth.py  challenge.py  game_session.py  learning_goal.py  module.py  objective.py  roadmap.py  room.py  room_invite.py  room_member.py  self_evaluations.py  task.py  task_notes.py  task_resources.py  team_member.py  user.py
soft-skills-back/schema/: auth.py  base.py  kanban.py  learning_goal.py  listening_event_log.py  listening_scoreboard.py  listening_scoring.py  module.py  objective.py  pomodoro_preferences.py  self_evaluation.py  task.py  task_note.py  task_resource.py  token.py  user.py
soft-skills-back/service/: activity.py  auth_service.py  challenge.py  kanban.py  learning_goal.py  (+11 more)
(+540 files in other folders)
